zeppplayer (1.6.5-1) bookworm jammy kinetic lunar; urgency=medium

  * Fix: AM/PM image don't work
  * Fix: add validation for app.json .runtime.type prop

 -- MelianMiko <melianmiko@gmail.com>  Thu, 11 May 2023 20:46:56 +0700

zeppplayer (1.6.4-1) bookworm jammy kinetic lunar; urgency=medium

  * Fix: auto-increment behaviour
  * Fix: STAND don't work in TEXT_IMG

 -- MelianMiko <melianmiko@gmail.com>  Tue, 09 May 2023 12:49:04 +0700

zeppplayer (1.6.3-1) bookworm jammy kinetic lunar; urgency=medium

  * Fix GIF rendering

 -- MelianMiko <melianmiko@gmail.com>  Sat, 06 May 2023 22:48:03 +0700

zeppplayer (1.6.2-1) bookworm jammy kinetic lunar; urgency=medium

  * Fix +1 func
  * Fix icon_space prop

 -- MelianMiko <melianmiko@gmail.com>  Sat, 06 May 2023 17:24:54 +0700

zeppplayer (1.6.1-1) bookworm jammy kinetic lunar; urgency=medium

  * Couple of bugfixes

 -- MelianMiko <melianmiko@gmail.com>  Sat, 06 May 2023 14:05:51 +0700

zeppplayer (1.6-2) bookworm jammy kinetic lunar; urgency=medium

  * Fix: TEXT_IMG unit alignment
  * Fix: TIME sensor ".utc" prop update
  * New: Switch to "build" subfolder if them exists (can be disabled)
  * New: Command palette (Ctrl-P)
  * Refactor: New settings modal

 -- MelianMiko <melianmiko@gmail.com>  Sun, 30 Apr 2023 18:28:30 +0700

zeppplayer (1.5.6-1) bookworm jammy kinetic lunar; urgency=medium

  * Fix: hmUI.deleteWidget() bugs
  * Fix: re-init player when changing device profile
  * Fix: hmUI.data_type.MOON support
  * New: Real-time clock mode

 -- MelianMiko <melianmiko@gmail.com>  Sat, 15 Apr 2023 19:37:22 +0700

zeppplayer (1.5.5-1) bookworm jammy kinetic; urgency=medium

  * Fix: WIND, WIND_DIRECTION, SUN_CURRENT data type's
  * Fix: Copy default_type to PersistentStorage on EDIT_GROUP init

 -- MelianMiko <melianmiko@gmail.com>  Wed, 29 Mar 2023 01:21:50 +0700
